adjusting the left-side spacing of all the content so it all lines up correctly

--- a/css/post.css
+++ b/css/post.css
@@ -5,7 +5,7 @@
     font-size: 2.5rem;
     color: black;
     margin-top: 1.25rem;
-    margin-left: 0;
+    margin-left: .25em;
 }
 
 .menu_title_dataset {
@@ -78,7 +78,7 @@
     font-size: 1.5em;
     color: black;
     text-decoration: none;
-    margin: 0 .5em .5em .5em;
+    margin: 0 .5em .5em .25em;
 
 }
 /*
@@ -291,7 +291,7 @@ table, th, td { margin: 0; padding: 0; border: 0; outline: 0; font-weight: inher
 /* #Standard
 ================================================== */
 
-table { border-collapse: collapse;}
+table { border-collapse: collapse; margin-left: .5em;}
 table, th, td {
 	border-top: 2px solid #3d3d3d;
 	border-bottom: 2px solid #3d3d3d;
